room info to state macine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_message_files(
    FILES
    MarkerList.msg
    RoomConnection.msg
+   RoomCoord.msg
  )
 
 ## Generate services in the 'srv' folder
